tests/derive-tests/as_variant_ref/fail/union.err.txt
error: Only enums can use this derive
 --> /tests/derive-tests/as_variant_ref/fail/union.rs:4:11
  |
4 | pub union Union {
  |           ^^^^^
